所有笔记都不记录滚动位置

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SiYuan",
+  "name": "siyuan",
   "version": "2.8.10",
   "description": "Build Your Eternal Digital Garden",
   "homepage": "https://b3log.org/siyuan",
